--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,44 @@
+#slider{
+    background-image:url("../images/slider-1.webp");
+    height: 800px;
+    width: 100%;
+}
+#heading-slider{
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    font-size: 50px;
+}
 
-#menu{
-    background-color: aqua;
-   
-    
+#text-slider{
+    position: absolute;
+    top: 30%;
+    left: 20%;
+    line-height: 2em;
+}
+#button-slider{
+    position:absolute ;
+    top: 45%;
+    left: 20%;
+}
+#image-slider{
+    position: absolute;
+    right: 10%;
+    top: 1%;
+}
+#scholarship{
+    position: absolute;
+    top: 80%;
+}
+#card1{
+    background-color:#48a7d4 ;
+}
+#card2{
+    background-color: #fdc735;
+}
+#card3{
+    background-color: #307ad5;
+}
+#card4{
+    background-color:#10c45c ;
 }
